--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,14 @@
     "packages": ["packages/*"],
     "version": "0.1.0",
     "npmClient": "yarn",
-    "useWorkspaces": true
+    "useWorkspaces": true,
+    "command": {
+        "publish": {
+            "ignoreChanges": ["ignored-file", "*.md"]
+        },
+        "bootstrap": {
+            "ignore": "component-*",
+            "npmClientArgs": ["--no-package-lock"]
+        }
+    }
 }
