--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,12 +7,15 @@
         "docs:build": "vuepress build docs"
     },
     "devDependencies": {
+        "@vuepress/plugin-back-to-top": "^1.9.7",
+        "moment": "^2.29.4",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
         "svg-sprite-loader": "^6.0.11",
-        "@vuepress/plugin-back-to-top": "^1.9.7",
-        "vuepress-plugin-code-copy": "^1.0.6",
-        "moment": "^2.29.4",
-        "vuepress": "^1.9.9"
+        "vuepress": "^1.9.9",
+        "vuepress-plugin-code-copy": "^1.0.6"
+    },
+    "dependencies": {
+        "@devops/bk-magic-vue": "^2.4.16-alpha.2"
     }
 }
