--- a/packages/upload-dialog/package.json
+++ b/packages/upload-dialog/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@devops/uploader",
+    "name": "@devops/upload-dialog",
     "version": "1.0.0",
     "description": "upload file component",
     "main": "install.js",
@@ -9,7 +9,6 @@
         "spark-md5": "^3.0.2"
     },
     "devDependencies": {
-        "@types/spark-md5": "^3.0.2",
-        "typescript": "^5.0.4"
+        "@types/spark-md5": "^3.0.2"
     }
 }
