--- a/packages/upload-dialog/package.json
+++ b/packages/upload-dialog/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@devops/upload-dialog",
     "version": "1.0.0",
-    "description": "upload file component",
+    "description": "文件上传组件",
     "main": "install.js",
     "author": "Caleb",
     "license": "ISC",
